Changelog 1.0.0-1.20.1:

- Added Leather Shield
- Added Gold Shield
- Added Diamond Shield
- Added Netherite Shield

Changelog 1.0.0-1.20.2:

- Ported to 1.20.2

Changelog 1.0.1-1.20.2:

- Changed Icon of Creative Mode Tab
- Added Amethyst Shield
- Added Emerald Shield
- Added End Crystal Shield
- Added Obsidian Shield
- Fixed de_de language

Changelog 1.0.2-1.20.2:

- Updated to forge - 48.1.0
- Changed mappings to parchment-1.20.2

Changelog 1.0.0-1.20.3:

- Ported to 1.20.3

Changelog 1.0.0-1.20.4:

- Ported to 1.20.4

Changelog 1.0.1-1.20.4:

- Updated to forge - 49.0.9
- Added Coal Shield (smeltable)
- Simplified code of End Crystal Shield
- Added Tool Tips for Shields

Changelog 1.0.2-1.20.4:

- Nerfed Leather Shield (durability 216 --> 196)
- Nerfed Gold Shield (durability 356 --> 322)
- Changed recipes (recipe should now work for other mods with the 'plank' tag)
- Fixed Coal Shield recipe (now compatible with charcoal)
- Netherite Shield is now fire-resistant
- Removed Custom Creative Mode Tab
- Added Items to the Combat Creative Mode Tab
- Crafting remainder support added to the equipment slot
- Fixed logo
- Updated to forge - 49.0.10
- Added Glass Shield (transparent)

BANNER SUPPORT COMING SOON!

Changelog 1.0.3-1.20.4:

- Added Tinted Glass Shield
- Updated to forge 49.0.14
- Finished Config support
- Changed language files

Changelog 1.0.4-1.20.4:

- Updated to forge 49.0.16
- Cleaned and sorted the code