@@ -65,3 +65,4 @@ Changelog 1.0.4-1.20.4:
 
 - Updated to forge 49.0.16
 - Cleaned and sorted the code
+- Tool tips are now your custom durability (Example: Leather Shield. Durability is YOUR_DURABILITY)
